# waybar-weather-rust

./: .gitignore  Cargo.nix  Cargo.toml  README.md  devenv.nix  flake.nix
.github/workflows/: build_binaries.yml
src/: codes.rs  main.rs  rest_api.rs
