[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
lazy_static = "1.4.0"
reqwest = "0.11.18"
serde = {version = "1.0.165", features = ["derive"]}
serde_json = "1.0.99"
tokio = {version = "1.29.1", features = ["full"]}
